<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.teamnoteff.noteff.ui.home.HomeFragment"
        android:label="@string/bnav_txt_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.teamnoteff.noteff.ui.categories.CategoriesFragment"
        android:label="@string/bnav_txt_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.teamnoteff.noteff.ui.notes.NotesFragment"
        android:label="@string/bnav_txt_notes"
        tools:layout="@layout/fragment_notes" />

    <dialog
        android:id="@+id/navigation_menu"
        android:name="com.teamnoteff.noteff.ui.menu.MenuFragment"
        android:label="bnav_txt_menu"
        tools:layout="@layout/fragment_menu2" />
</navigation>