<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.create.DataSegmentFragment">

    <!--Close Icon-->
    <ImageButton
        android:id="@+id/imgBtnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close"
        android:background="#55ffffff"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ds_title"
        android:layout_marginTop="16dp"
        android:layout_marginStart="22dp"
        android:textSize="16dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/take_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ds_ic_take_photo"
            android:background="#55ffffff"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/upload_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ds_ic_upload_image"
            android:background="#55ffffff"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ds_ic_link"
            android:background="#55ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/take_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:textColor="#9B9B9B"/>

        <TextView
            android:id="@+id/upload_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:layout_marginTop="10dp"
            android:layout_marginStart="36dp"
            android:textColor="#9B9B9B"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:layout_marginTop="10dp"
            android:layout_marginStart="56dp"
            android:textColor="#9B9B9B"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/plain_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ds_ic_plain_text"
            android:background="#55ffffff"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/phone_number_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ds_ic_phone_number"
            android:background="#55ffffff"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/important_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ds_ic_important"
            android:background="#55ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plain_text"
            android:layout_marginStart="28dp"
            android:layout_marginTop="10dp"
            android:textColor="#9B9B9B"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="10dp"
            android:layout_marginStart="38dp"
            android:textColor="#9B9B9B"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important"
            android:layout_marginTop="10dp"
            android:layout_marginStart="36dp"
            android:textColor="#9B9B9B"/>

    </LinearLayout>

</LinearLayout>